projects/compiler/test/parser/functiondecl_error_self_type_annotation.out
Error at %FILE_NAME%:1:14
Unexpected token ':', expected one of ',', ')':
  |  func foo(self: Int) {}
                  ^